--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 	<div id="fh5co-hero-wrapper">
 		<nav class="container navbar navbar-expand-lg main-navbar-nav navbar-light">
-			<a class="navbar-brand" href=""><img src="logo_tandil.png" alt="" width="120" height="50"></a>
+			<a class="navbar-brand" href=""><img src="img/logotandil.png" alt="" width="120" height="50"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
