--- a/index.html
+++ b/index.html
@@ -53,6 +53,31 @@
 
 	</div> <!-- first section wrapper -->
 
+	<footer class="footer-outer">
+			<div class="container footer-inner">
+
+				<div class="footer-three-grid wow fadeIn animated" data-wow-delay="0.66s">
+					<div class="column-1-3">
+						<h1>Trash</h1>
+					</div>
+					<div class="column-2-3">
+
+					</div>
+					<div class="column-3-3">
+						<div class="social-icons-footer">
+							<a href=""><i class="fab fa-facebook-f"></i></a>
+							<a href=""><i class="fab fa-instagram"></i></a>
+							<a href=""><i class="fab fa-twitter"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<span class="border-bottom-footer"></span>
+
+				<p class="copyright">&copy; 2018 App. All rights reserved. Design by Scrum Group</p>
+
+			</div>
+		</footer>
 
 </div> <!-- main page wrapper -->
 
