SCRUM0319-18 Creacion de Menu de navegacion

--- a/index.html
+++ b/index.html
@@ -49,6 +49,38 @@
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav nav-items-center ml-auto mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Reportar Basura </a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link denuncia" href="#" data-toggle="modal" data-target="#modalDenunciaForm">Denunciar</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Mis Reportes</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+		<!-- ==========================================================================================================
+																   IFRAME GOOGLE MAPS
+					 ========================================================================================================== -->
+				<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d25382.58977624712!2d-59.12654744135478!3d-37.32300305515352!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1556158604704!5m2!1ses-419!2sar" width="100%" height="90%" frameborder="0" style="border:0"></iframe>
+
+		<!-- ==========================================================================================================
+																			FORM POP UP (GENERAR DENUNCIA)
+				  ========================================================================================================== -->
+
+
+
+
+		<!-- ==========================================================================================================
+							 															POP UP (MENSAJE DENUNCIA GENERADA)
+						========================================================================================================== -->
+
+
 
 
 	</div> <!-- first section wrapper -->
@@ -61,7 +93,13 @@
 						<h1>Trash</h1>
 					</div>
 					<div class="column-2-3">
-
+						<nav class="footer-nav">
+						<ul>
+							<a href="#" ><li>Reportar Basura</li></a>
+							<a href="#" data-toggle="modal" data-target="#modalDenunciaForm"><li>Denunciar</li></a>
+							<a href="#" ><li>Mis Reportes</li></a>
+						</ul>
+					</nav>
 					</div>
 					<div class="column-3-3">
 						<div class="social-icons-footer">
