--- a/index.html
+++ b/index.html
@@ -133,7 +133,28 @@
 							 															POP UP (MENSAJE DENUNCIA GENERADA)
 						========================================================================================================== -->
 
-
+			 <div class="modal fade" id="modalMensaje" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+			 aria-hidden="true">
+			 <div class="modal-dialog" role="document">
+				 <div class="modal-content">
+					 <div class="modal-header text-center">
+						 <h4 class="modal-title w-100 font-weight-bold">Denuncia enviado</h4>
+						 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							 <span aria-hidden="true">&times;</span>
+						 </button>
+					 </div>
+					 <div class="modal-body mx-3">
+						 <div class="md-form">
+							 <i class="fas fa-pencil prefix grey-text"></i>
+							 <label data-error="wrong" data-success="right" for="form8">Su denuncia ha sido enviado exitosamente. Gracias por colaborar!</label>
+						 </div>
+					 </div>
+					 <div class="modal-footer d-flex justify-content-center">
+						<button class="btn btn-unique2" data-dismiss="modal" >Cerrar<i class="fas fa-paper-plane-o ml-1"></i></button>
+					</div>
+				 </div>
+			 </div>
+		 </div>
 
 
 	</div> <!-- first section wrapper -->
