--- a/index.html
+++ b/index.html
@@ -87,51 +87,62 @@
 				 <div class="modal-content">
 					 <div class="modal-header text-center">
 						 <h4 class="modal-title w-100 font-weight-bold">Reporte</h4>
-						 </button>
+						 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+ 							 <span aria-hidden="true">&times;</span>
+ 						 </button>
 					 </div>
 					 <div class="modal-body mx-3 ">
 					 	<p class="lead">Datos del Denunciante</p>
 
 					 	  </div>
-						 	<div class="modal-body mx-3">
-							 <i class="fas fa-user prefix grey-text"></i>
-							 <label data-error="wrong" data-success="right" for="form34">Nombre</label>
-						 	  <input type="text" id="form34" class="form-control validate" maxlength="30" required>
+					 	  <form>
+							 	<div class="modal-body mx-3">
+								 <i class="fas fa-user prefix grey-text"></i>
+								 <label data-error="wrong" data-success="right" for="form34">Nombre</label>
+							 	  <input type="text" id="form34" class="form-control validate" maxlength="30" required>
 
 
-							 <i class="fas fa-user prefix grey-text"></i>
-							 <label data-error="wrong" data-success="right" for="form34">Apellido</label>
-						 	<input type="text" id="form34" class="form-control validate" maxlength="30" required>
+								 <i class="fas fa-user prefix grey-text"></i>
+								 <label data-error="wrong" data-success="right" for="form34">Apellido</label>
+							 	<input type="text" id="form34" class="form-control validate" maxlength="30" required>
 
 
-							 <i class="fas fa-map-marker-alt prefix grey-text"></i>
-							 <label data-error="wrong" data-success="right" for="form29">Direccion</label>
-							  <input type="email" id="form29" class="form-control validate" required>
-							 </div>
+								 <i class="fas fa-map-marker-alt prefix grey-text"></i>
+								 <label data-error="wrong" data-success="right" for="form29">Direccion</label>
+								  <input type="email" id="form29" class="form-control validate" required>
+								 </div>
+							 </form>
 
 							<hr align="center" size="100" width="87%" margin-left="80%" />
 							 <div class="modal-body mx-3">
 					 	   <p class="lead">Datos de la Denuncia</p>
 					 	  </div>
 					 	  <div class="modal-body mx-3">
-					 	  	 <i class="fas fa-car prefix grey-text"></i>
-							<label data-error="wrong" data-success="right" for="form34" maxlength="7" required>Patente del Vehiculo</label>
-						 	<input type="text" id="form34" class="form-control validate">
+					 	  	<form>
+						 	  	 <i class="fas fa-car prefix grey-text"></i>
+								<label data-error="wrong" data-success="right" for="form34" maxlength="7" required>Patente del Vehiculo</label>
+							 	<input type="text" id="form34" class="form-control validate required">
 
-							 <i class="fas fa-calendar-alt prefix grey-text"></i>
-							<label data-error="wrong" data-success="right" for="form34">Fecha</label>
-						 	<input type="date" id="form34" class="form-control validate" required>
+								 <i class="fas fa-calendar-alt prefix grey-text"></i>
+								<label data-error="wrong" data-success="right" for="form34">Fecha</label>
+							 	<input type="date" id="form34" class="form-control validate" required required>
 
 
-							 <i class="fas fa-clock prefix grey-text"></i>
-							 <label data-error="wrong" data-success="right" for="form34">Hora</label>
-						 	<input type="time" id="form34" class="form-control validate" required>
+								 <i class="fas fa-clock prefix grey-text"></i>
+								 <label data-error="wrong" data-success="right" for="form34">Hora</label>
+							 	<input type="time" id="form34" class="form-control validate" required required>
 
-							<!-- DIV PARA EL IFRAME DE GEOLOCALIZACION  DE GOOGLE -->
-							<div id="mapa"  style="width: 100%; height: 200px; margin-top: 10px"></div>
-							<input type="hidden" class="inputLat" id="inputLat" name="latitud" value="">
-							<input type="hidden" class="inputLng" id="inputLng" name="longitud" value="">
+								<!-- DIV PARA EL IFRAME DE GEOLOCALIZACION  DE GOOGLE -->
+								<div id="mapa"  style="width: 100%; height: 200px; margin-top: 10px"></div>
+								<input type="hidden" class="inputLat" id="inputLat" name="latitud" value="" required>
+								<input type="hidden" class="inputLng" id="inputLng" name="longitud" value="" required>
 
+								<div class="labelvideo">
+									<i class="fas fa-arrow-circle-up prefix grey-text"></i>
+									<label data-error="wrong" data-success="right" for="upvideo">Subir video</label>
+								</div>
+								<input type="file" accept="video/*" class="form-control validate upvideo" name="" required>
+							</form>
 					 </div>
 
 				 </div>
@@ -148,7 +159,7 @@
 			 <div class="modal-dialog" role="document">
 				 <div class="modal-content">
 					 <div class="modal-header text-center">
-						 <h4 class="modal-title w-100 font-weight-bold">Denuncia enviado</h4>
+						 <h4 class="modal-title w-100 font-weight-bold">Denuncia enviada</h4>
 						 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 							 <span aria-hidden="true">&times;</span>
 						 </button>
@@ -165,8 +176,6 @@
 				 </div>
 			 </div>
 		 </div>
-
-
 	</div> <!-- first section wrapper -->
 
 	<footer class="footer-outer">
