SCRUM0319-15 Creado el botón para cancelar el formulario

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 									<label data-error="wrong" data-success="right" for="upvideo">Subir video</label>
 								</div>
 								<input type="file" accept="video/*" class="form-control validate upvideo" name="" required>
+								<input type="button" class="form-control validate cancelarreporte" value="Cancelar reporte" name="" data-toggle="modal" data-target="#modalMensajeConfCancel">
 								<input type="submit" class="form-control validate enviarreporte" value="Enviar reporte" name="" data-toggle="modal" data-target="#modalMensaje">
 							</form>
 					 </div>
