Texto pop up modificado

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					 <div class="modal-body mx-3">
 						 <div class="md-form">
 							 <i class="fas fa-pencil prefix grey-text"></i>
-							 <label data-error="wrong" data-success="right" for="form8">Su denuncia ha sido enviado exitosamente. Gracias por colaborar!</label>
+							 <label data-error="wrong" data-success="right" for="form8">Su denuncia ha sido enviada exitosamente. Gracias por colaborar!</label>
 						 </div>
 					 </div>
 				 </div>
